--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     var imageArray = [];
     var panel = document.getElementById('panel');
 
-    for (let i = 0; i < 10; i++) {
-        imageArray.push('gif/' + i + '.png');
+    for (let i = 1; i < 50; i++) {
+        imageArray.push('gif/x/frame-' + i + '.gif');
     }
 
     let loadingComplete = function () {
