--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     var panel = document.getElementById('panel');
 
     for (let i = 1; i < 50; i++) {
-        imageArray.push('gif/x/frame-' + i + '.gif');
+        imageArray.push('./gif/x/frame-' + i + '.gif');
     }
 
     let loadingComplete = function () {
